<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workout_title_label"
                style="?android:listSeparatorTextViewStyle" />

            <EditText android:id="@+id/workout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/workout_title_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workout_date_label"
                style="?android:listSeparatorTextViewStyle"/>

            <Button
                android:id="@+id/workout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workout_place_label"
                style="?android:listSeparatorTextViewStyle" />

            <EditText android:id="@+id/workout_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/workout_place_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workout_start_time_label"
                style="?android:listSeparatorTextViewStyle"/>

            <Button
                android:id="@+id/workout_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workout_end_time_label"
                style="?android:listSeparatorTextViewStyle"/>

            <Button
                android:id="@+id/workout_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workout_activity_type_label"
                style="?android:listSeparatorTextViewStyle"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/workout_activity_type">

                <RadioButton
                    android:id="@+id/workout_individual"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/workout_individual_label"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/workout_group"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/workout_group_label"
                    android:checked="false" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>